--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %} FORGOT YOUR PASSWORD? {% endblock title %}
+{% block title %} ENTER NEW PASSWORD {% endblock title %}
 
 {% block content %}
     <h1>Forgot your password?</h1>
-    <p>Enter your email address idiot</p>
+    <p>enter your password</p>
     <form method="Post">
         {% csrf_token %}
         {{  form | crispy}}
-        <input class="btn-btn-success" type="submit" value="Send">
+        <input class="btn-btn-success" type="submit" value="Change my password">
     </form>
 {% endblock content %}
