--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-        <div class="article-entry">
-            <h2>{{ article.title }}</h2>
-            <p>{{ article.author }} | {{ article.date }}</p>
-            <p>{{ article.body }}</p>
-        </div>
+    <div class="article-entry">
+        <h2>{{ article.title }}</h2>
+        <p>{{ article.author }} | {{ article.date }}</p>
+        <p>{{ article.body }}</p>
+    </div>
+    <p><a href="{% url 'article_edit' article.pk%}">Edit</a></p>
 {% endblock content %}
